# makini-tap-constant

./: .gitignore  main.py  meltano.yml  pyproject.toml  setup.py  tap-makini-constant.sh
makini_tap_constant/: tap.py
meltano-tap-constant/: mapper.py  tap.py  tap_rest_constant.py
meltano_tap_constant/: __init__.py  tap.py  tap_rest_constant.py
