[tool.poetry]
name = "makini-tap-constant"
version = "1.0"
description = "A Singer SDK-based tap for constant data"
authors = ["CangVo"]

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.dependencies.singer-sdk]
version = "~=0.42.0"
extras = [
  "faker",
]

[tool.poetry.scripts]
makini-tap-constant = "makini_tap_constant.tap:TapConstant.cli"
