[tool.poetry]
name = "makini-tap-constant"
version = "1.0"
description = "A Singer SDK-based tap for constant data"
authors = ["CangVo"]

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.dependencies.singer-sdk]
version = "~=0.42.0"
extras = [
  "faker",
]

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
makini-tap-constant = "makini_tap_constant.tap:TapConstant.cli"
